<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="5dp" >

    <ImageView
        android:id="@+id/im1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/apk_Location" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@+id/im1"
        android:text="@string/zlgl2_text1"
        android:textColor="@color/black"
        android:textSize="16sp" />

    
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/im1"
        android:text="@string/zlgl2_text1_1"
        android:textColor="#666"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/im1"
        android:text="@string/zlgl2_text1_2"
        android:textColor="#666"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text3"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/im1"
        android:text="@string/zlgl2_text1_3"
        android:textColor="#666"
        android:textSize="14sp" />




    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text4"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/im1"
        android:text="@string/zlgl2_text1_4"
        android:textColor="#666"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text5"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/im1"
        android:text="@string/zlgl2_text1_4"
        android:textColor="#666"
        android:textSize="14sp" />


</RelativeLayout>